# uberfetch

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-03-01-uberfetch-design.md  2026-03-01-uberfetch-impl.md
src/: main.rs
src/animation/: diamond.rs  geodesic.rs  helix.rs  hypercube.rs  klein.rs  lorenz.rs  math.rs  mobius.rs  mod.rs  toroid.rs  torus_knot.rs
src/renderer/: color.rs  layout.rs  mod.rs
src/sysinfo/: linux.rs  macos.rs  mod.rs
