[package]
name = "uberfetch"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A neofetch alternative with esoteric terminal animations"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"
tachyonfx = "0.9"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
